[package]
name = "grep-rust"
version = "0.1.0"
edition = "2021"
authors = ["NERVEbing <lc91926@gmail.com>"]
homepage = "https://lvlv.fun/"
repository = "https://github.com/NERVEbing/grep-rust/"
license = "Apache License 2.0"
description = "Like grep, but use rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
